# lovelace

./: .gitignore  INSTALL  INSTALL-NEW  LICENSE  README  UPGRADE  content_parser.py  create_apache_conf.py  dot_test1.gv  dot_test3.gv  dot_test4.gv  graph_builder.py  jQuery-slimScroll-LICENSE.txt  pyproject.toml  requirements.txt  test2.txt  test3.txt
checkingserver/: README  checkerServer.py  testClient.py  test_server.py
django-project/: collaborators_lopputyot.py  get_stats.py  graph.vg  manage.py  runserver.sh  sqlite3.db  sqlite3.db_back  uncompiled.vg
django-project/courses/: #_assh_bportal.mdf.dy.fi_b_ahome_amdf_aprojects_araippa__ng_adjango-project_acourses_acodefile-normal-begin.html#  admin.py  blockparser.py  codefile-normal-begin.html  codefile-normal-end.html  content_parser.py  filecheck_client.py  graph_builder.py  highlighters.py  models.py  views.py
migration_code/: contentgraph_convert.py  coursemedia_data.py  instance_file_data.py  move_returnables.py  term_data.py  term_refactor_data.py
template_scratchpad/: blockcode.html  blockcode.js  code_block.html  code_block.html~  raippa-template.html  raippa-template.html~  raippa.css~
test_files/: dot_test2.gv  repeated_template_backend.py  repeated_template_noinstances.py  test1.txt
webapp/: TODO.txt  _cleanup.py  _load_terms.py  celery_result_daemon.py  collaborators_lopputyot.py  create_example_file_upload_exercise.py  create_file_exercise.py  delete_file_exercise.py  get_stats.py  laske_tyot.sh  lopputyot.py  manage.py  reset_db.sh  runbeat.sh  runcelery.sh  runserver.sh
webapp/ace/: apps.py  (+8 more)
(+551 files in other folders)
